More controls to page patient